--- a/step-capstone/app.yaml
+++ b/step-capstone/app.yaml
@@ -1,2 +1,8 @@
-runtime: nodejs
-env: flex
+runtime: nodejs10
+
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
