--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -10,10 +10,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "serve": "^11.3.2",
     "stable": "^0.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
+    "local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
