removed unneeded package

--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -11,8 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "serve": "^11.3.2",
-    "stable": "^0.1.8"
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "serve -s build",
