--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-scripts": "3.4.1",
+    "react-swipeable-views": "^0.13.9",
     "serve": "^11.3.2",
     "stable": "^0.1.8"
   },
