--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -11,6 +11,7 @@
     "firebase": "^7.15.4",
     "firebaseui": "^4.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "serve": "^11.3.2",
