--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.15.4",
+    "firebase-admin": "^8.12.1",
     "firebaseui": "^4.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
