--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.14.0",
+    "firebase": "^7.15.5",
+    "firebaseui": "^4.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
