--- a/step-capstone/.env
+++ b/step-capstone/.env
@@ -4,4 +4,4 @@ REACT_APP_DATABASE_URL="https://privacy-engprod-capstone.firebaseio.com"
 REACT_APP_PROJECT_ID="privacy-engprod-capstone"
 REACT_APP_STORAGE_BUCKET="privacy-engprod-capstone.appspot.com"
 REACT_APP_MESSAGING_SENDER_ID="390165048626"
-
+REACT_APP_IP_RESTRICTED="AIzaSyB8HF6JnEpK-nDbWR3X9hKJllBKkRcBVbU"
