--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
