--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.14.0",
     "firebase": "^7.16.1",
     "firebaseui": "^4.6.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
