--- a/step-capstone/package.json
+++ b/step-capstone/package.json
@@ -15,6 +15,7 @@
     "firebase": "^7.16.1",
     "firebaseui": "^4.6.0",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
